# hackmud-rust-script

./: .gitignore  Cargo.toml
scriptgen/: index.js  package.json  pnpm-lock.yaml
src/: lib.rs
