[package]
name = "hackmud-rust-script"
version = "0.1.0"
authors = ["mogery"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
wee_alloc = { version = "0.4", default-features = false }
json = "*"
unreachable = "1.0.0"

[profile.release]
# Optimize for small code size
opt-level = "z"
# Link-time optimization
lto = true
strip = true
codegen-units = 1
panic = "abort"
